Update Profile Name, Description.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+DEFAULT_WEB_CLIENT_ID = "473573029024-8qk39c090fnkgtab8fvtriph3j8ceoab.apps.googleusercontent.com"
